--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ Template: reverie
 body{
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size:16px;
+	background-image: url("http://localhost:8888/wp-content/uploads/Image_151.png");
+    background-position: left top;
+    background-repeat: repeat;
 	
 	
 }
